@@ -8,6 +8,7 @@ osha.surveyanswers Changelog
   These questions were actually never asked (gerken)
 - Now with the real meanings of categories (sec3, size_5) (gerken)
 - Complete country mapping no answers. Norway and Switzerland added (gerken)
+- Added support for % questions (gerken)
 
 osha.surveyanswers 1.4.0 (2009-09-15)
 -------------------------------------
